# milvus-admin-ui

./: .env.template  .gitignore  Dockerfile  Makefile  README.md  milvus.docker-compose.yml  pyproject.toml
.wxo/: manifest.json
examples/: rag.py
scripts/: build-ui.sh  install_milvus.sh  run_container.sh  run_milvus.sh  stop_milvus.sh  test_docling.sh  test_workflow.sh
src/utils/: __init__.py  cli_ingest.py  create_vector_db.py
tests/: test_docling.py  test_workflow.py
ui/: extraction.py  index.html  package-lock.json  package.json  server.py  vite.config.ts
ui/src/: App.tsx  dataProvider.ts
ui/src/pages/collections/: create.tsx  list.tsx
ui/src/pages/collections/components/: AddDataWizard.tsx  CreateCollectionWizard copy 2.tsx  CreateCollectionWizard copy.tsx  CreateCollectionWizard.tsx
ui/src/pages/notes/: Notes.tsx
ui/src/pages/rag/: Rag copy.tsx  Rag.tsx
ui/src/pages/status/: Status.tsx
ui/static/: index.html
