[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "milvus-admin-ui"
version = "0.3.1"
description = "Milvus admin & RAG UI with S3-compatible data staging utilities"
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
  { name = "Ruslan Magana Vsevolodovna", email = "contact@ruslanmv.com" }
]
keywords = ["ibm-cos", "s3", "milvus", "vector", "rag", "admin-ui"]

classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Database",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Application"
]

dependencies = [
  "ibm-cos-sdk>=2.13.0",
  "boto3>=1.34.0",
  "python-dotenv>=1.0.1",
  "tenacity>=8.2.3",
  "pymilvus>=2.4.6",
  "numpy>=1.26",
  "sentence-transformers>=3.0",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "pydantic>=2,<3",

  # ✅ For FastAPI form-data / file uploads
  "python-multipart>=0.0.9",

  # ✅ Efficient static file and upload streaming
  "aiofiles>=23.2.1",

  # ✅ For model snapshot downloads during preload
  "huggingface-hub>=0.24",

  # ✅ Docling-based extraction pipeline
  "docling==2.60.0",
  "langdetect>=1.0.9",
  "pymupdf>=1.24",

  # ✅ Torch pin for stability; skip on Apple Silicon where prebuilt wheels differ
  "torch>=2.1,<3 ; platform_system!='Darwin' or platform_machine!='arm64'",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "black>=24.3",
  "mypy>=1.8",
  "types-requests>=2.31.0.20240218",
  "types-python-dateutil>=2.8.19.20240311"
]
test = [
  "pytest>=8.1",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "requests>=2.32"
]

[project.urls]
Homepage = "https://ruslanmv.com"
Documentation = "https://ruslanmv.com"
Source = "https://ruslanmv.com"
Issues = "https://ruslanmv.com"

[project.scripts]
mui-ingest = "utils.cli_ingest:main"
mui-create-vectordb = "utils.create_vector_db:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
